Update 1.9 Understand and apply risk management concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.9 Understand and apply risk management concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.9 Understand and apply risk management concepts.md
@@ -24,7 +24,34 @@ By weaving together these concepts, a risk-based strategy becomes a living proce
 
 Threats are potential events that may lead to undesired outcomes for a specific asset, whether intentional or accidental. Think of threats as dangers that could harm a target, similar to a weapon. Vulnerabilities represent weaknesses in an asset or the absence of safeguards, such as flaws, limitations, or errors, making it susceptible to harm.
 Threats and vulnerabilities are interrelated: a threat becomes feasible when a vulnerability exists. Threats exploit vulnerabilities, leading to exposure, which is the risk. Safeguards mitigate risks by protecting assets from threats. Threat agents intentionally exploit vulnerabilities, while threat events encompass both accidental occurrences and intentional exploitation of vulnerabilities. Threat vectors, also known as attack vectors, are the paths or means by which an attack gains access to a target to cause harm.
-Exposure refers to susceptibility to asset loss due to threats, representing the potential for harm. The quantitative risk analysis value of exposure factor (EF) is derived from this concept. Risk is the likelihood that a threat will exploit a vulnerability to cause harm to an asset and the severity of potential damage. The higher the potential harm, the greater the risk
+Exposure refers to susceptibility to asset loss due to threats, representing the potential for harm. The quantitative risk analysis value of exposure factor (EF) is derived from this concept. Risk is the likelihood that a threat will exploit a vulnerability to cause harm to an asset and the severity of potential damage. The higher the potential harm, the greater the risk.
+
+```mermaid
+flowchart LR
+  Asset[Asset]
+  Threat[Threat]
+  Vulnerability[Vulnerability]
+  ThreatAgent[Threat Agent]
+  AttackVector[Threat / Attack Vector]
+  ThreatEvent[Threat Event]
+  Exposure[Exposure Factor]
+  Safeguard[Safeguard / Control]
+  Risk[Risk]
+
+  ThreatAgent -->|uses| AttackVector
+  AttackVector -->|exploits| Vulnerability
+  Vulnerability -->|affects| Asset
+  Threat -->|becomes feasible when| Vulnerability
+  ThreatEvent -->|occurs when| ThreatAgent
+  ThreatEvent -->|causes| Exposure
+  Exposure -->|influences| Risk
+  Safeguard -.reduces.-> Vulnerability
+  Safeguard -.reduces.-> Exposure
+  Risk -->|is likelihood × severity| Asset
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
 
 :link: NIST SP 800-30r1 provides a list of threat categories, concepts and examples: https://csrc.nist.gov/pubs/sp/800/30/r1/final
 
