Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
@@ -55,3 +55,117 @@ flowchart LR
 
 :link: NIST SP 800-30r1 provides a list of threat categories, concepts and examples: https://csrc.nist.gov/pubs/sp/800/30/r1/final
 
+### Open Questions ###
+1. What is the key difference between a threat and a vulnerability?
+<details>
+  <summary>Show answer</summary>
+A threat is a potential event that could cause harm, while a vulnerability is a weakness that makes an asset susceptible to that harm.
+</details>
+
+2. How do threats and vulnerabilities interact to create risk?
+<details>
+  <summary>Show answer</summary>
+Threats exploit existing vulnerabilities. When a threat successfully utilizes a vulnerability, it leads to risk, which is the likelihood of harm occurring.
+</details>
+
+3. Explain the concept of a safeguard and its role in risk management.
+<details>
+  <summary>Show answer</summary>
+A safeguard is a protective measure that mitigates risk by reducing vulnerabilities or neutralizing threats. Examples include firewalls, security cameras, and data encryption.
+</details>
+
+4. Differentiate between a threat agent and a threat event.
+<details>
+  <summary>Show answer</summary>
+A threat agent is an entity that intentionally exploits vulnerabilities, like a hacker or malicious software. A threat event encompasses both intentional actions by threat agents and accidental occurrences that could lead to harm.
+</details>
+
+5. Define a threat vector and provide an example.
+<details>
+  <summary>Show answer</summary>
+A threat vector is the path or method used by a threat agent to gain access to a target. For instance, a phishing email could be a threat vector used to steal credentials.
+</details>
+
+6. What is exposure in the context of risk assessment, and how is it quantified?
+<details>
+  <summary>Show answer</summary>
+Exposure refers to the potential for asset loss due to a threat. It represents the susceptibility to harm. The Exposure Factor (EF) is a quantitative value used in risk analysis to express this susceptibility.
+</details>
+
+7. Describe the relationship between risk and the potential severity of harm.
+<details>
+  <summary>Show answer</summary>
+Risk is directly proportional to the potential severity of harm. A threat that can cause significant damage poses a higher risk than one with limited potential impact.
+</details>
+
+8. Why is understanding the distinction between threats, vulnerabilities, and risk important for security professionals?
+<details>
+  <summary>Show answer</summary>
+Understanding these distinctions allows security professionals to accurately assess and prioritize risks, develop effective mitigation strategies, and allocate resources appropriately.
+</details>
+
+9. Can a threat exist without a corresponding vulnerability? Explain.
+<details>
+  <summary>Show answer</summary>
+A threat can exist theoretically without a corresponding vulnerability. However, it cannot materialize or cause harm without a weakness to exploit.
+</details>
+
+10. Provide a real-world example illustrating a threat, a vulnerability, and the resulting risk.
+<details>
+  <summary>Show answer</summary>
+Threat: A cybercriminal attempting to steal customer data. Vulnerability: A website with weak password security. Risk: The likelihood of the cybercriminal successfully exploiting the weak passwords to steal sensitive data.
+</details>
+
+---
+
+## 1.9.2 Risk analysis, assessment, and scope ##
+
+Risk in the context of security is the potential for harm resulting from a threat exploiting a vulnerability within a system. This concept is often quantified as the product of the probability of harm and the severity of that harm. Addressing either the threat or vulnerability directly through mitigation efforts reduces risk. Threats exploit vulnerabilities, leading to exposure, which is the essence of risk, and safeguarding assets against threats is key to risk mitigation. While it's impossible to eliminate all risks entirely, organizations can manage them by identifying acceptable and unacceptable risks, typically through a combination of quantitative and qualitative risk analysis methodologies. Quantitative analysis assigns tangible dollar values to asset losses, while qualitative analysis assesses subjective factors. Most organizations utilize a blend of both methodologies to prioritize risks based on asset-threat pairings and rank them in order of criticality, aiming to minimize the overall risk exposure.
+In the process of risk ranking, quantitative analysis involves determining the anticipated annual cost of risk to the organization, known as the Annualized Loss Expectancy (ALE). This can be computed using the formula:
+
+**ALE = SLE x ARO**
+
+**ALE =  (AV x EF) x ARO**
+
+Here, the acronyms correspond to:
+- AV: Asset Value: The estimated financial worth or value of an asset within an organization.
+- EF: Exposure Factor: The percentage of asset value likely to be lost in the event of a security breach.
+- SLE: Single Loss Expectancy: The anticipated monetary loss from a single occurrence of a security incident.
+- ARO: Annualized Rate of Occurrence: The estimated frequency or likelihood of a security incident occurring within a year.
+- ALE: Annualized Loss Expectancy: The projected annual financial impact resulting from potential security incidents, calculated by multiplying the SLE by the ARO.
+
+![SLE](https://github.com/user-attachments/assets/78b3be10-f144-4a84-8724-63307bdbe928)
+
+### Open Questions ###
+
+1. Briefly describe the two main approaches to risk analysis: quantitative and qualitative.
+<details>
+  <summary>Show answer</summary>
+Quantitative risk analysis uses numerical data to determine the financial impact and probability of losses. Qualitative analysis considers subjective factors and the impact on intangible assets like reputation.
+</details>
+
+2. What does the acronym SLE stand for, and how is it calculated?
+<details>
+  <summary>Show answer</summary>
+SLE stands for Single Loss Expectancy and represents the estimated monetary loss from a single security incident. It is calculated by multiplying the Asset Value (AV) by the Exposure Factor (EF): SLE = AV x EF.
+</details>
+
+3. What is the significance of the Annualized Rate of Occurrence (ARO) in risk assessment?
+<details>
+  <summary>Show answer</summary>
+The Annualized Rate of Occurrence (ARO) is a crucial element in risk assessment because it estimates how frequently a particular security incident is expected to occur within a year.
+</details>
+
+4. How does the Annualized Loss Expectancy (ALE) help organizations prioritize risk mitigation efforts?
+<details>
+  <summary>Show answer</summary>
+ALE (Annualized Loss Expectancy) helps organizations prioritize risk mitigation efforts by providing an estimated annual financial impact of potential security incidents. Higher ALE values indicate more critical risks requiring immediate attention.
+</details>
+
+5. Provide the complete formula for calculating the ALE, explaining each component.
+<details>
+  <summary>Show answer</summary>
+The formula for calculating ALE is: ALE = SLE x ARO, where SLE is the Single Loss Expectancy and ARO is the Annualized Rate of Occurrence
+</details>
+
+---
