Update 1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md

--- a/DOMAIN1: The Cybersecurity Manager/1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md
@@ -26,10 +26,10 @@ Here is how you can pratically harden your server:
 
 | Control Area     | Practice Step |
 |------------------|---------------|
-| Password Policy  | Enable `RelaxMinimumPasswordLengthLimits`, set minimum length to ≥16, enable complexity and password history :contentReference[oaicite:1]{index=1} |
-| Audit            | Enable the `MinimumPasswordLengthAudit` policy and monitor Event ID 16978 on domain controllers to track shorter password usage :contentReference[oaicite:2]{index=2} |
+| Password Policy  | Enable `RelaxMinimumPasswordLengthLimits`, set minimum length to ≥16, enable complexity and password history |
+| Audit            | Enable the `MinimumPasswordLengthAudit` policy and monitor Event ID 16978 on domain controllers to track shorter password usage |
 | Lockout Policy   | In Group Policy, set account lockout threshold to 3–5 invalid attempts, account lockout duration around 15 minutes, and reset counter timer similarly |
-| MFA for RDP      | Install Duo Authentication for Windows Logon & RDP, or deploy RD Gateway + NPS extension with Azure AD/Azure Entra ID MFA :contentReference[oaicite:3]{index=3} |
+| MFA for RDP      | Install Duo Authentication for Windows Logon & RDP, or deploy RD Gateway + NPS extension with Azure AD/Azure Entra ID MFA |
 | Least Privilege  | Create an AD security group specifically for RDP access, restrict membership to only necessary users, avoid using admin accounts, and enforce via GPO local group membership |
 
 **4 Network Layer & Port Configuration**
