Update 1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md

--- a/DOMAIN1: The Cybersecurity Manager/1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.L.2 Locking Down RDP: Expert-Level Setup, Ports, Authentication & Monitoring.md
@@ -71,3 +71,17 @@ Here is how you can pratically harden your server:
 - Disable RDP entirely on systems where it’s not needed. Remove the service if idle long-term.
 
 - Train users and administrators on RDP security best practices: MFA, VPN use, credential management, phishing risks.
+
+**Wrap up Checklist**
+
+| Step | Action |
+|------|--------|
+| 1    | Install/enable RDP; require NLA |
+| 2    | Open firewall port restricted properly |
+| 3    | Enforce strong passwords + MFA + account lockout |
+| 4    | Use VPN or RD Gateway; change port 3389 |
+| 5    | Enable TLS encryption; disable weak protocols |
+| 6    | Avoid saving credentials; use certificates/smart cards |
+| 7    | Log, monitor, and record sessions |
+| 8    | Patch regularly; disable unused RDP; educate users |
+
